--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -11,4 +11,5 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: 'print system owner name'
-              run: echo 'Abhishek shamra'
+              run: echo 'Abhishek Shamra'
+              run: 'ls'
