--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -12,4 +12,5 @@ jobs:
         steps:
             - name: 'print system owner name'
               run: echo 'Abhishek Shamra'
+            - name: 'pripnting available files'
               run: 'ls'
